--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git commit -am "Add changes"
+        git commit -am "Desplegando web"
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
